--- a/navy/wp-content/themes/navy/highgrade/css/new.css
+++ b/navy/wp-content/themes/navy/highgrade/css/new.css
@@ -73,3 +73,55 @@
 .footemail a:hover{
     color:#e6e8ea !important;
 }
+
+.form-group .form-control {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    background-color: #fff;
+    border: 1px solid #dee2e6;
+    color: #3c4858;
+    height: 42px;
+    font-size: 13px;
+    border-radius: 6px;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;}
+
+    .form-group .icons {
+        position: absolute;
+        top: 13px;
+        left: 18px;
+    }
+    .fea.icon-sm {
+        height: 16px;
+        width: 16px;
+    }
+    .fea.icon-sm {
+        height: 16px;
+        width: 16px;
+    }
+    .fea {
+        stroke-width: 1.8;
+    }
+    .fea {
+        stroke-width: 1.8;
+    }
+
+    .social-icon li a {
+        color: #0659c5;
+        border: 1px solid #3c4858;
+        display: inline-block;
+        height: 32px;
+        width: 32px;
+        line-height: 28px;
+        text-align: center;
+        -webkit-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+        overflow: hidden;
+        position: relative;
+    }
+
+    .social-icon li a:hover {
+        background-color: #2f55d4;
+        border-color: #2f55d4 !important;
+        color: #fff !important;
+    }
