--- a/navy/wp-content/themes/navy/style.css
+++ b/navy/wp-content/themes/navy/style.css
@@ -463,7 +463,7 @@ body {
     font-family: Source Sans Pro;
     font-size: 14px;
     line-height: 24px;
-    color: #313368;
+    color: #5ABA47;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
 }
